--- a/articles/azure-resource-manager/management/toc.yml
+++ b/articles/azure-resource-manager/management/toc.yml
@@ -25,6 +25,11 @@
       href: extension-resource-types.md
     - name: リソース インスタンスの制限
       href: resources-without-resource-group-limit.md
+    - name: セキュリティ
+      items:
+        - name: Azure Policy によるセキュリティ制御
+          displayName: 'regulatory, compliance, standards, domains'
+          href: ./security-controls-policy.md
 - name: 方法
   items:
     - name: 移動 - リソース グループ/サブスクリプション
