--- a/articles/devtest-labs/TOC.yml
+++ b/articles/devtest-labs/TOC.yml
@@ -291,7 +291,7 @@
     - name: PowerShell - サンプル Az.DevTestLabs2 モジュール
       href: 'https://github.com/Azure/azure-devtestlab/tree/master/samples/DevTestLabs/Modules/Library'
     - name: REST API
-      href: 'https://docs.microsoft.com/rest/api/dtl/'
+      href: /rest/api/dtl/
     - name: Resource Manager テンプレート
       href: /azure/templates/microsoft.devtestlab/allversions
 - name: リソース
@@ -301,7 +301,7 @@
     - name: 価格
       href: 'https://azure.microsoft.com/pricing/details/devtest-lab/'
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-devtestlabs.html'
+      href: /answers/topics/azure-devtestlabs.html
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-devtest-labs'
     - name: ビデオ
