--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -329,7 +329,7 @@
         - name: 共有ディスク
           href: disks-shared.md
         - name: エフェメラル OS ディスク
-          href: ephemeral-os-disks.md
+          href: ../ephemeral-os-disks.md
     - name: ネットワーク
       href: ../network-overview.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
     - name: スケール セット
