--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -49,8 +49,13 @@
       href: connect-virtual-network-vnet-isolated-environment-overview.md
     - name: 事業継続とディザスター リカバリー
       href: business-continuity-disaster-recovery-guidance.md
-    - name: セキュリティ ベースライン
-      href: security-baseline.md
+    - name: セキュリティ
+      items:
+        - name: Azure Policy によるセキュリティ制御
+          displayName: 'regulatory, compliance, standards, domains'
+          href: ./security-controls-policy.md
+        - name: セキュリティ ベースライン
+          href: security-baseline.md
 - name: 操作方法ガイド
   items:
     - name: 開発
