--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -143,6 +143,9 @@
           href: cluster-security-certificates.md
         - name: Service Fabric での証明書管理
           href: cluster-security-certificate-management.md
+        - name: Azure Policy によるセキュリティ制御
+          displayName: 'regulatory, compliance, standards, domains'
+          href: ./security-controls-policy.md
         - name: Azure セキュリティ ベンチマーク用のセキュリティ ベースライン
           href: security-baseline.md
     - name: 用語
