--- a/articles/virtual-machine-scale-sets/TOC.yml
+++ b/articles/virtual-machine-scale-sets/TOC.yml
@@ -185,7 +185,7 @@
           href: ../virtual-machines/windows/premium-storage-performance.md
           maintainContext: true
         - name: エフェメラル OS ディスク
-          href: ephemeral-os-disks.md
+          href: ../virtual-machines/ephemeral-os-disks.md
         - name: ディスクのスケーラビリティ ターゲット
           href: ../virtual-machines/windows/disk-scalability-targets.md
           maintainContext: true
