--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -55,7 +55,7 @@ groups:
   - id: programming-language-cpp
     title: C++
   - id: programming-language-go
-    title: Go
+    title: 移動
   - id: programming-language-java
     title: Java
   - id: programming-language-python
@@ -468,10 +468,30 @@ groups:
     title: Kotlin (Android)
   - id: programming-language-swift
     title: Swift (iOS)
+- id: programming-languages-set-twenty-one
+  title: プログラミング言語
+  prompt: プログラミング言語を選択する
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-java
+    title: Java
+- id: programming-languages-set-twenty-two
+  title: プログラミング言語
+  prompt: プログラミング言語を選択する
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-cpp
+    title: C++
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-python
+    title: Python
 metadata:
-  ms.openlocfilehash: 1b217a4cece304da740c5402c8ae1665404a7d91
-  ms.sourcegitcommit: e132633b9c3a53b3ead101ea2711570e60d67b83
+  ms.openlocfilehash: ec7beebb81bf6a96912ff43a1e071f85d0d8a108
+  ms.sourcegitcommit: dccb85aed33d9251048024faf7ef23c94d695145
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/07/2020
-  ms.locfileid: "86040539"
+  ms.lasthandoff: 07/28/2020
+  ms.locfileid: "87291856"
