--- a/articles/role-based-access-control/TOC.yml
+++ b/articles/role-based-access-control/TOC.yml
@@ -37,6 +37,11 @@
       href: best-practices.md
     - name: Azure 管理の条件付きアクセス
       href: conditional-access-azure-management.md
+    - name: セキュリティ
+      items:
+        - name: Azure Policy によるセキュリティ制御
+          displayName: 'regulatory, compliance, standards, domains'
+          href: ./security-controls-policy.md
 - name: 操作方法ガイド
   items:
     - name: ロール定義の一覧表示
