--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -1020,6 +1020,10 @@
           href: insights/resource-group-insights.md
         - name: 分析情報のトラブルシューティング
           href: insights/troubleshoot-workbooks.md
+    - name: 変更の分析
+      items:
+        - name: 変更の分析
+          href: app/change-analysis.md
     - name: ソリューション
       items:
         - name: 概要
@@ -1073,30 +1077,6 @@
               href: insights/vmware.md
             - name: Wire Data ソリューション
               href: insights/wire-data.md
-        - name: ビュー
-          items:
-            - name: ビューからブックへの変換
-              items:
-                - name: 変換の概要
-                  href: platform/view-designer-conversion-overview.md
-                - name: 変換オプション
-                  href: platform/view-designer-conversion-options.md
-                - name: 概要とアクセス
-                  href: platform/view-designer-conversion-access.md
-                - name: 一般的なタスク
-                  href: platform/view-designer-conversion-tasks.md
-                - name: タイルの変換
-                  href: platform/view-designer-conversion-tiles.md
-                - name: 例
-                  href: platform/view-designer-conversion-examples.md
-            - name: ビュー デザイナー
-              href: platform/view-designer.md
-            - name: タイルのリファレンス
-              href: platform/view-designer-tiles.md
-            - name: 視覚化パーツのリファレンス
-              href: platform/view-designer-parts.md
-            - name: フィルター
-              href: platform/view-designer-filters.md
     - name: Workbooks
       items:
         - name: 概要
@@ -1124,6 +1104,20 @@
                   href: platform/workbooks-time.md
                 - name: テキスト パラメーター
                   href: platform/workbooks-text.md
+        - name: ビューからブックへの変換
+          items:
+            - name: 変換の概要
+              href: platform/view-designer-conversion-overview.md
+            - name: 変換オプション
+              href: platform/view-designer-conversion-options.md
+            - name: 概要とアクセス
+              href: platform/view-designer-conversion-access.md
+            - name: 一般的なタスク
+              href: platform/view-designer-conversion-tasks.md
+            - name: タイルの変換
+              href: platform/view-designer-conversion-tiles.md
+            - name: 例
+              href: platform/view-designer-conversion-examples.md
     - name: その他の視覚化
       items:
         - name: Power BI
@@ -1217,6 +1211,8 @@
           href: app/azure-functions-supported-features.md
         - name: リリース ノート
           items:
+            - name: コードベースの監視 SDK
+              href: app/release-notes.md
             - name: Web アプリ拡張機能
               href: app/web-app-extension-release-notes.md
         - name: データ モデル
@@ -1297,6 +1293,16 @@
           href: platform/resource-logs-blob-format.md
         - name: Key Vault Analytics (非推奨)
           href: insights/azure-key-vault-deprecated.md
+        - name: ビュー
+          items:
+            - name: ビュー デザイナー
+              href: platform/view-designer.md
+            - name: タイルのリファレンス
+              href: platform/view-designer-tiles.md
+            - name: 視覚化パーツのリファレンス
+              href: platform/view-designer-parts.md
+            - name: フィルター
+              href: platform/view-designer-filters.md
 - name: リソース
   items:
     - name: Azure のロードマップ
