--- a/articles/azure-resource-manager/templates/toc.yml
+++ b/articles/azure-resource-manager/templates/toc.yml
@@ -302,6 +302,8 @@
         - name: デプロイ スクリプト
           displayName: custom script
           href: deployment-script-template.md
+        - name: デプロイ スクリプト開発環境を作成する
+          href: deployment-script-template-configure-dev.md
         - name: テンプレートをモジュール化する
           displayName: 'linked templates, nested templates'
           href: linked-templates.md
