--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -416,6 +416,8 @@
                   href: how-to-custom-commands-add-interaction-rules.md
                 - name: 音声応答の言語生成テンプレートを追加する
                   href: how-to-custom-commands-add-language-generation-templates.md
+                - name: Custom Voice を使用する
+                  href: how-to-custom-commands-use-custom-voice.md
             - name: 統合
               items:
                 - name: Speech SDK を使用してクライアント アプリと統合する
@@ -452,6 +454,8 @@
               href: faq-voice-assistants.md
             - name: Speech SDK
               href: speech-sdk.md
+            - name: カスタム コマンドによる保存データの暗号化
+              href: custom-commands-encryption-of-data-at-rest.md
     - name: Direct Line Speech
       items:
         - name: Direct Line Speech とは
