--- a/articles/storage/tables/TOC.yml
+++ b/articles/storage/tables/TOC.yml
@@ -127,11 +127,11 @@
               href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
             - name: 安全な転送が必要
               href: ../common/storage-require-secure-transfer.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-            - name: トランスポート層セキュリティ (TLS) を構成する
+            - name: トランスポート層セキュリティ (TLS) を管理する
               items:
-                - name: ストレージ アカウントの最小 TLS バージョンを構成する
+                - name: 受信要求に TLS の最小バージョンを適用する
                   href: ../common/transport-layer-security-configure-minimum-version.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-                - name: クライアント アプリケーションの TLS を構成する
+                - name: クライアント アプリケーションの TLS バージョンを構成する
                   href: ../common/transport-layer-security-configure-client-version.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
     - name: データの冗長性を管理する
       items:
