--- a/articles/virtual-desktop/index.yml
+++ b/articles/virtual-desktop/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: Heidilohr
   ms.author: helohr
   ms.date: 03/06/2020
-  ms.openlocfilehash: 596d115d02d246afc037bd6f453f2eec2f9ca2d1
-  ms.sourcegitcommit: dabd9eb9925308d3c2404c3957e5c921408089da
+  ms.openlocfilehash: 26cba2d46a8d203bd16551702b4af6069b23008c
+  ms.sourcegitcommit: dccb85aed33d9251048024faf7ef23c94d695145
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/11/2020
-  ms.locfileid: "86259844"
+  ms.lasthandoff: 07/28/2020
+  ms.locfileid: "87285120"
 landingContent:
 - title: Windows Virtual Desktop について
   linkLists:
@@ -24,7 +24,7 @@ landingContent:
     links:
     - text: Windows Virtual Desktop とは
       url: overview.md
-- title: Windows Virtual Desktop Spring 2020 リリースの概要
+- title: Windows Virtual Desktop の概要
   linkLists:
   - linkListType: tutorial
     links:
@@ -36,7 +36,7 @@ landingContent:
       url: create-validation-host-pool.md
     - text: サービス アラートを設定する
       url: set-up-service-alerts.md
-- title: Windows Virtual Desktop Fall 2019 リリースの概要
+- title: Windows Virtual Desktop (クラシック) の概要
   linkLists:
   - linkListType: tutorial
     links:
