--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -43,8 +43,11 @@
     - name: 概念
       expanded: false
       items:
-        - name: Security
+        - name: セキュリティ
           items:
+            - name: Azure Policy によるセキュリティ制御
+              displayName: 'regulatory, compliance, standards, domains'
+              href: ./security-controls-policy.md
             - name: セキュリティ ベースライン
               href: security-baseline.md
         - name: コンテナー レジストリのサービス レベルと制限
