--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -458,12 +458,15 @@
         - name: パラメーター化クエリ
           displayName: 'parameterized query, parameterized, parameter, parameters'
           href: sql-query-parameterized-queries.md
-        - name: LINQ to SQL
-          displayName: 'linq, .NET'
-          href: sql-query-linq-to-sql.md
         - name: SQL クエリの実行
           displayName: 'query performance, query execution'
           href: sql-query-execution.md
+        - name: 改ページ位置の自動修正
+          displayName: 'page, paging, continuation, token, pagination'
+          href: sql-query-pagination.md
+        - name: LINQ to SQL
+          displayName: 'linq, .NET'
+          href: sql-query-linq-to-sql.md
     - name: Azure Cosmos アカウントの使用
       href: account-overview.md
     - name: コンテナーとアイテム
@@ -671,7 +674,7 @@
             - name: PowerShell を使用して管理する
               href: powershell-samples-cassandra.md
             - name: Azure CLI を使用して管理する
-              href: cli-samples-cassandra.md
+              href: cli-samples.md
     - name: MongoDB API
       items:
         - name: 概要
@@ -765,7 +768,7 @@
             - name: PowerShell を使用して管理する
               href: powershell-samples-mongodb.md
             - name: Azure CLI を使用して管理する
-              href: cli-samples-mongodb.md
+              href: cli-samples.md
             - name: 一般的な問題のトラブルシューティング
               href: mongodb-troubleshoot.md
     - name: Gremlin API
@@ -825,7 +828,7 @@
             - name: PowerShell を使用して管理する
               href: powershell-samples-gremlin.md
             - name: Azure CLI を使用して管理する
-              href: cli-samples-gremlin.md
+              href: cli-samples.md
         - name: リファレンス
           items:
             - name: レスポンス ヘッダー
@@ -896,7 +899,7 @@
             - name: PowerShell を使用して管理する
               href: powershell-samples-table.md
             - name: Azure CLI を使用して管理する
-              href: cli-samples-table.md
+              href: cli-samples.md
         - name: リファレンス
           items:
             - name: .NET
