--- a/articles/azure-cache-for-redis/TOC.yml
+++ b/articles/azure-cache-for-redis/TOC.yml
@@ -29,30 +29,36 @@
           href: cache-python-get-started.md
 - name: チュートリアル
   items:
+    - name: ASP.NET
+      items:
+        - name: セッション状態プロバイダーの使用
+          href: cache-aspnet-session-state-provider.md
+        - name: 出力キャッシュ プロバイダーの使用
+          href: cache-aspnet-output-cache-provider.md
+    - name: Java Spring
+      items:
+        - name: Spring Boot Initializer の使用
+          href: cache-java-spring-boot-initializer-with-redis-cache.md
     - name: ランキングに基づくキャッシュを使用する
       href: cache-web-app-cache-aside-leaderboard.md
-- name: サンプル
-  items:
-    - name: Azure Cache for Redis のサンプル
-      href: cache-redis-samples.md
-    - name: Azure
+    - name: Azure PowerShell
       href: cache-how-to-manage-redis-cache-powershell.md
     - name: Azure CLI
       href: cli-samples.md
-    - name: Azure Policy の組み込み
-      displayName: 'samples, policies, definitions'
-      href: ./policy-samples.md
 - name: 概念
   items:
-    - name: Security
-      items:
-        - name: セキュリティ ベースライン
-          href: security-baseline.md
     - name: フェールオーバーと修正プログラムの適用
       href: cache-failover.md
     - name: ベスト プラクティス
       href: cache-best-practices.md
-    - name: キャッシュに関するアーキテクチャのベスト プラクティス
+    - name: セキュリティ
+      items:
+        - name: Azure Policy によるセキュリティ制御
+          displayName: 'regulatory, compliance, standards, domains'
+          href: ./security-controls-policy.md
+        - name: セキュリティ ベースライン
+          href: security-baseline.md
+    - name: キャッシュ アーキテクチャ
       href: 'https://docs.microsoft.com/azure/architecture/best-practices/caching?toc=%2Fazure%2Fredis-cache%2Ftoc.json'
 - name: 操作方法ガイド
   items:
@@ -86,18 +92,6 @@
           href: cache-redis-cache-arm-provision.md
         - name: Azure Cache for Redis で Web アプリをプロビジョニングする
           href: cache-web-app-arm-with-redis-cache-provision.md
-    - name: アプリケーションと統合する
-      items:
-        - name: ASP.NET
-          items:
-            - name: セッション状態プロバイダーの使用
-              href: cache-aspnet-session-state-provider.md
-            - name: 出力キャッシュ プロバイダーの使用
-              href: cache-aspnet-output-cache-provider.md
-        - name: Java Spring
-          items:
-            - name: Spring Boot Initializer の使用
-              href: cache-java-spring-boot-initializer-with-redis-cache.md
     - name: 管理する
       items:
         - name: Azure Portal での構成
@@ -136,35 +130,37 @@
           href: cache-how-to-premium-clustering.md
 - name: リファレンス
   items:
-    - name: コード サンプル
-      href: 'https://azure.microsoft.com/resources/samples/?service=redis-cache'
-    - name: Azure PowerShell
-      href: /powershell/module/az.rediscache
-    - name: Azure CLI
-      href: /cli/azure/redis
+    - name: Azure Cache for Redis のサンプル
+      href: cache-redis-samples.md
     - name: .NET
       href: /dotnet/api/microsoft.azure.management.redis
     - name: Java
       href: /java/api/com.microsoft.azure.management.redis.rediscache
     - name: Redis クライアント
       href: 'https://redis.io/clients'
-    - name: Redis コマンド
-      href: 'https://redis.io/commands#'
+    - name: Azure PowerShell
+      href: /powershell/module/az.rediscache
+    - name: Azure CLI
+      href: /cli/azure/redis
     - name: REST
       href: 'https://docs.microsoft.com/rest/api/redis/'
     - name: Resource Manager テンプレート
       href: /azure/templates/microsoft.cache/allversions
+    - name: Azure Policy の組み込み
+      href: ./policy-samples.md
+    - name: Redis コマンド
+      href: 'https://redis.io/commands#'
 - name: リソース
   items:
-    - name: Microsoft Learn でスキルを身に付ける
-      href: /learn/browse/?products=azure-redis-cache
-    - name: Azure のロードマップ
-      href: 'https://azure.microsoft.com/roadmap/?category=databases'
-    - name: 価格
-      href: 'https://azure.microsoft.com/pricing/details/cache/'
     - name: Azure Cache for Redis に関する FAQ
       href: cache-faq.md
     - name: ビデオ
       href: 'https://www.youtube.com/results?search_query=azure+redis+cache'
     - name: Microsoft Q&A 質問ページ
       href: 'https://docs.microsoft.com/answers/topics/azure-cache-redis.html'
+    - name: 価格
+      href: 'https://azure.microsoft.com/pricing/details/cache/'
+    - name: Microsoft Learn でスキルを身に付ける
+      href: /learn/browse/?products=azure-redis-cache
+    - name: Azure のロードマップ
+      href: 'https://azure.microsoft.com/roadmap/?category=databases'
