--- a/articles/event-hubs/TOC.yml
+++ b/articles/event-hubs/TOC.yml
@@ -206,11 +206,11 @@
           href: event-hubs-management-libraries.md
     - name: セキュリティで保護
       items:
-        - name: IP ファイアウォールの構成
+        - name: 特定の IP アドレスからのアクセスの許可
           href: event-hubs-ip-filtering.md
-        - name: 仮想ネットワーク サービス エンドポイントの構成
+        - name: 特定の仮想ネットワークからのアクセスの許可
           href: event-hubs-service-endpoints.md
-        - name: プライベート エンドポイントの構成
+        - name: プライベート エンドポイント経由のアクセスの許可
           href: private-link-service.md
         - name: 顧客管理キーの構成
           href: configure-customer-managed-key.md
