--- a/articles/machine-learning/team-data-science-process/toc.yml
+++ b/articles/machine-learning/team-data-science-process/toc.yml
@@ -95,7 +95,7 @@
               href: /azure/hdinsight/r-server/r-server-overview?context=azure/machine-learning/team-data-science-process/context/ml-context
             - name: HDInsight での R Server の概要
               href: /azure/hdinsight/r-server/r-server-overview?context=azure/machine-learning/team-data-science-process/context/ml-context
-        - name: Azure Machine Learning ワークスペース
+        - name: Machine Learning Studio (classic) ワークスペース
           href: /azure/machine-learning/studio/create-workspace?context=azure/machine-learning/team-data-science-process/context/ml-context
     - name: ビジネス ニーズの分析
       items:
@@ -192,8 +192,6 @@
       href: deploy-models-in-production.md
 - name: 関連項目
   items:
-    - name: Azure Machine Learning
-      href: ../
     - name: Cognitive Services
       href: 'https://docs.microsoft.com/azure/cognitive-services/'
     - name: 異常検出
