--- a/articles/service-bus-messaging/TOC.yml
+++ b/articles/service-bus-messaging/TOC.yml
@@ -220,11 +220,11 @@
               href: service-bus-resource-manager-namespace-topic-with-rule.md
     - name: セキュリティで保護
       items:
-        - name: ファイアウォールの構成
+        - name: 特定の IP アドレスからのアクセスの許可
           href: service-bus-ip-filtering.md
-        - name: 仮想ネットワーク サービス エンドポイントの構成
+        - name: 特定の仮想ネットワークからのアクセスの許可
           href: service-bus-service-endpoints.md
-        - name: プライベート エンドポイントの構成
+        - name: プライベート エンドポイント経由のアクセスの許可
           href: private-link-service.md
         - name: 顧客管理キーの構成
           href: configure-customer-managed-key.md
