--- a/articles/key-vault/certificates/index.yml
+++ b/articles/key-vault/certificates/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: msmbaldwin
   ms.author: mbaldwin
   ms.date: 04/07/2020
-  ms.openlocfilehash: 78963c02d35d93b4756c12f948c5ba214fb23e90
-  ms.sourcegitcommit: b80aafd2c71d7366838811e92bd234ddbab507b6
+  ms.openlocfilehash: 365f0b07370937a73d3925373be0be544a182865
+  ms.sourcegitcommit: 5b8fb60a5ded05c5b7281094d18cf8ae15cb1d55
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 04/16/2020
-  ms.locfileid: "81423532"
+  ms.lasthandoff: 07/29/2020
+  ms.locfileid: "87386777"
 landingContent:
 - title: 証明書
   linkLists:
@@ -24,6 +24,8 @@ landingContent:
     links:
     - text: Key Vault 証明書とは
       url: about-certificates.md
+    - text: 論理的な削除に関する重要なニュース
+      url: ../general/soft-delete-change.md
     - text: Key Vault 証明書の概要
       url: certificate-scenarios.md
     - text: 証明書の作成方法
@@ -53,7 +55,7 @@ landingContent:
     - text: 基本的な概念
       url: ../general/basic-concepts.md
     - text: 論理的な削除の概要
-      url: ../general/overview-soft-delete.md
+      url: ../general/soft-delete-overview.md
     - text: セキュリティの概要
       url: ../general/overview-security.md
 - title: Microsoft Learn
