--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -110,6 +110,11 @@
           href: knowledge-store-projection-overview.md
         - name: インクリメンタル エンリッチメント
           href: cognitive-search-incremental-indexing-conceptual.md
+    - name: セキュリティ
+      items:
+        - name: Azure Policy によるセキュリティ制御
+          displayName: 'regulatory, compliance, standards, domains'
+          href: ./security-controls-policy.md
 - name: 操作方法ガイド
   items:
     - name: インデックスとコンストラクトの作成
