--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -93,7 +93,7 @@
     - name: Resource Manager テンプレート
       href: template-samples.md
     - name: コード サンプル
-      href: 'https://docs.microsoft.com/samples/browse/?term=Event%20Grid'
+      href: /samples/browse/?term=Event+Grid
     - name: Azure Policy の組み込み
       href: ./policy-samples.md
 - name: 概念
