--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -17,9 +17,9 @@
       items:
         - name: BLOB の使用
           items:
-            - name: Azure portal
+            - name: Azure Portal
               href: storage-quickstart-blobs-portal.md
-            - name: ストレージ エクスプローラー
+            - name: Storage Explorer
               href: storage-quickstart-blobs-storage-explorer.md
             - name: PowerShell
               href: storage-quickstart-blobs-powershell.md
@@ -491,7 +491,7 @@
           href: ../common/storage-account-move.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: 監視 (クラシック)
           items:
-            - name: Azure portal での監視 (クラシック)
+            - name: Azure Portal での監視 (クラシック)
               href: ../common/storage-monitor-storage-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: トラブルシューティング
           items:
@@ -550,19 +550,19 @@
       items:
         - name: Azure の更新情報
           href: 'https://azure.microsoft.com/updates/?product=storage'
-        - name: Azure ストレージ エクスプローラー
+        - name: Azure Storage Explorer
           items:
             - name: Storage Explorer のダウンロード
               href: 'https://azure.microsoft.com/features/storage-explorer/'
             - name: Storage Explorer の概要
               href: ../../vs-azure-tools-storage-manage-with-storage-explorer.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: ストレージ エクスプローラーのリリース ノート
+            - name: Storage Explorer のリリース ノート
               href: 'https://github.com/microsoft/AzureStorageExplorer/releases'
-            - name: ストレージ エクスプローラーのトラブルシューティング
+            - name: Storage Explorer のトラブルシューティング
               href: ../common/storage-explorer-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Storage Explorer のサポート ポリシーとライフサイクル
               href: ../common/storage-explorer-support-policy-lifecycle.md
-            - name: ストレージ エクスプローラーのアクセシビリティ
+            - name: Storage Explorer のアクセシビリティ
               href: ../../vs-azure-tools-storage-explorer-accessibility.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Azure Storage フォーラム
           href: 'https://docs.microsoft.com/answers/topics/azure-blob-storage.html'
@@ -725,7 +725,7 @@
               href: data-lake-storage-directory-file-acl-powershell.md
             - name: CLI
               href: data-lake-storage-directory-file-acl-cli.md
-            - name: ストレージ エクスプローラー
+            - name: Storage Explorer
               href: data-lake-storage-explorer.md
             - name: Hadoop ファイル システム CLI
               href: data-lake-storage-use-hdfs-data-lake-storage.md
@@ -824,17 +824,17 @@
           href: 'https://azure.microsoft.com/updates/?product=storage'
         - name: Azure Storage クライアント ツール
           href: ../common/storage-explorers.md?toc=%2fazure%2fstorage%2fdata-lake-storage%2ftoc.json
-        - name: Azure ストレージ エクスプローラー
+        - name: Azure Storage Explorer
           items:
             - name: Storage Explorer のダウンロード
               href: 'https://azure.microsoft.com/features/storage-explorer/'
             - name: Storage Explorer の概要
               href: ../../vs-azure-tools-storage-manage-with-storage-explorer.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: ストレージ エクスプローラーのリリース ノート
+            - name: Storage Explorer のリリース ノート
               href: 'https://github.com/microsoft/AzureStorageExplorer/releases'
-            - name: ストレージ エクスプローラーのトラブルシューティング
+            - name: Storage Explorer のトラブルシューティング
               href: ../common/storage-explorer-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: ストレージ エクスプローラーのアクセシビリティ
+            - name: Storage Explorer のアクセシビリティ
               href: ../../vs-azure-tools-storage-explorer-accessibility.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Microsoft Q&A 質問ページ
           href: 'https://docs.microsoft.com/answers/topics/azure-blob-storage.html'
