commit translated contents

--- a/articles/machine-learning/team-data-science-process/toc.yml
+++ b/articles/machine-learning/team-data-science-process/toc.yml
@@ -209,7 +209,7 @@
     - name: TDSP を使用している組織
       items:
         - name: New Signature
-          href: 'https://newsignature.com/services/professional-services/advanced-analytics/'
+          href: 'https://newsignature.com/services/'
         - name: BlueGranite
           href: 'https://www.blue-granite.com/blog/getting-more-from-your-data-science-teams-organization-and-process-considerations'
     - name: Microsoft の関連リソース
