commit translated contents

--- a/articles/key-vault/secrets/toc.yml
+++ b/articles/key-vault/secrets/toc.yml
@@ -28,12 +28,12 @@
       href: quick-create-template.md
 - name: チュートリアル
   items:
-    - name: ローテーション
+    - name: シークレットのローテーション
       items:
-        - name: デュアル資格情報ローテーションのチュートリアル
-          href: tutorial-rotation-dual.md
-        - name: シングル ユーザーまたはパスワードのローテーションのチュートリアル
+        - name: 1 組の資格情報を使用するリソースのシークレットのローテーション
           href: tutorial-rotation.md
+        - name: 2 組の資格情報を使用するリソースのシークレットのローテーション
+          href: tutorial-rotation-dual.md
     - name: アプリケーションの統合
       items:
         - name: Linux VM と ASP.NET コンソール アプリケーションを使用してシークレットを格納する
