--- a/articles/devtest-labs/TOC.yml
+++ b/articles/devtest-labs/TOC.yml
@@ -232,6 +232,10 @@
           href: devtest-lab-mandatory-artifacts.md
         - name: アーティファクトの適用に関する問題のトラブルシューティング
           href: devtest-lab-troubleshoot-apply-artifacts.md
+    - name: ラボで使用されるストレージと OS ディスクの暗号化
+      items:
+        - name: ラボで使用されるストレージの暗号化
+          href: encrypt-storage.md
     - name: CI/CD との統合
       items:
         - name: ラボを Azure Pipelines CI/CD パイプラインに統合する
