--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -42,8 +42,10 @@
           href: how-to-use-cli.md
         - name: インスタンスと認証を設定する (スクリプト化)
           href: how-to-set-up-instance-scripted.md
-        - name: インスタンスと認証を設定する (手動)
-          href: how-to-set-up-instance-manual.md
+        - name: インスタンスと認証を設定する (CLI)
+          href: how-to-set-up-instance-cli.md
+        - name: インスタンスと認証を設定する (ポータル)
+          href: how-to-set-up-instance-portal.md
         - name: アプリ認証コードを作成する
           href: how-to-authenticate-client.md
     - name: モデルを設計する
