--- a/articles/network-watcher/toc.yml
+++ b/articles/network-watcher/toc.yml
@@ -7,8 +7,6 @@
 - name: クイックスタート
   expanded: true
   items:
-    - name: 接続モニター (プレビュー)
-      href: connection-monitor-preview.md
     - name: VM トラフィック フィルターに関する問題を診断する - ポータル
       href: diagnose-vm-network-traffic-filtering-problem.md
     - name: VM トラフィック フィルターに関する問題を診断する - PowerShell
@@ -27,6 +25,8 @@
       href: network-watcher-nsg-flow-logging-portal.md
 - name: 概念
   items:
+    - name: 接続モニター (プレビュー)
+      href: connection-monitor-preview.md
     - name: VM ネットワーク トラフィック フィルターに関する問題を診断する
       href: network-watcher-ip-flow-verify-overview.md
     - name: VM のルーティングに関する問題を診断する
@@ -162,6 +162,10 @@
       href: view-relative-latencies.md
     - name: ネットワーク パフォーマンスを監視する
       href: ../log-analytics/log-analytics-network-performance-monitor.md?toc=%2fazure%2fnetwork-watcher%2ftoc.json
+    - name: リソースの移動
+      items:
+        - name: Network Watcher リソースの移動
+          href: resource-move.md
 - name: リファレンス
   items:
     - name: Azure CLI
